// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should not render without address 1`] = `
<div>
  <div
    class="inline-flex items-center no-ligatures"
  />
</div>
`;

exports[`Formatted Address should render address only 1`] = `
<div>
  <div
    class="inline-flex items-center no-ligatures"
  >
    <span
      class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with normal font 1`] = `
<div>
  <div
    class="inline-flex items-center no-ligatures"
  >
    <span
      class="flex-auto mr-2 text-base font-normal max-w-24 truncate text-theme-text"
      data-testid="address__wallet-name"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="text-base font-normal TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet name 1`] = `
<div>
  <div
    class="inline-flex items-center no-ligatures"
  >
    <span
      class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
      data-testid="address__wallet-name"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;
